--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - C:/Python_Assignment/adb_test/tmp:/tmp
-      - C:/Python_Assignment/adb_test/src:/src
+      - ${TODO_APP_PATH}/tmp:/tmp
+      - ${TODO_APP_PATH}/src:/src
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
@@ -58,7 +58,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - C:/Python_Assignment/adb_test/src:/src
+      - ${TODO_APP_PATH}/src:/src
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
@@ -69,5 +69,5 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - C:/Python_Assignment/adb_test/src/db:/data/db
+      - ${TODO_APP_PATH}/db:/data/db
     command: mongod --bind_ip_all
